--- a/package.json
+++ b/package.json
@@ -27,12 +27,18 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "prop-types": "^15.6.2",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.2.2",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
+    "reduxsauce": "^1.0.0",
+    "seamless-immutable": "^7.1.3"
   }
 }
