--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["react", "es2015", "stage-1"]
+  "presets": [
+    "env",
+    "react",
+    "stage-0",
+    "es2015"
+  ],
+  "plugins": [
+    ["import", {libraryName: "antd", style: "css"}],
+    "transform-runtime",
+    "transform-decorators-legacy",
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    "react-hot-loader/babel"
+  ]
 }
