--- a/package.json
+++ b/package.json
@@ -1,44 +1,73 @@
 {
   "name": "dicegame",
   "version": "1.0.0",
-  "description": "Dice game web app",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/blockladder2018/dicegame.git"
-  },
+  "main": "src/index.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "start": "webpack-dev-server --mode development --hot --config webpack.config.js --host 0.0.0.0",
+    "dist": "webpack --mode production --config webpack.config.js",
+    "clean": "rm -rf dist",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "build-server": "npm run clean && npm run dist && npm run start"
   },
-  "author": "Alex Dai",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/blockladder2018/dicegame/issues"
-  },
-  "homepage": "https://github.com/blockladder2018/dicegame#readme",
-  "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "",
+  "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
-    "prop-types": "^15.6.2",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-redux": "5.0.7",
-    "react-router-dom": "^4.2.2",
-    "redux": "4.0.0",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.3.0",
+    "@material-ui/core": "^1.4.3",
+    "antd": "^3.8.1",
+    "chart.js": "^2.7.2",
+    "history": "4.7.2",
+    "lodash": "^4.17.10",
+    "npm": "^6.3.0",
+    "preconditions": "^2.2.1",
+    "rcolor": "^1.0.1",
+    "react": "16.4.1",
+    "react-chartjs-2": "^2.7.4",
+    "react-dom": "16.4.1",
+    "react-redux": "^5.0.7",
+    "react-table": "^6.8.6",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "reduxsauce": "^1.0.0",
-    "seamless-immutable": "^7.1.3"
+    "typeface-roboto": "0.0.54"
+  },
+  "devDependencies": {
+    "autoprefixer": "9.0.1",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.6",
+    "babel-loader": "7.1.5",
+    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "bootstrap": "4.1.3",
+    "css-loader": "1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "file-loader": "1.1.11",
+    "gh-pages": "1.2.0",
+    "html-webpack-plugin": "3.2.0",
+    "less": "3.8.0",
+    "less-loader": "4.1.0",
+    "node-sass": "github:chnbohwr/node-sass",
+    "postcss-loader": "2.1.6",
+    "react-hot-loader": "4.3.3",
+    "rimraf": "2.6.2",
+    "sass-loader": "7.0.3",
+    "style-loader": "0.21.0",
+    "webpack": "4.16.2",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.5"
   }
 }
