--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "reduxsauce": "^1.0.0",
+    "seamless-immutable": "^7.1.3",
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
