--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.4.1",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "16.4.1",
+    "react-infinite-scroller": "^1.2.0",
     "react-redux": "^5.0.7",
     "react-table": "^6.8.6",
     "redux": "^4.0.0",
